--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 	    <meta charset="utf-8">
-		<title>RSS 2 Twitter</title>
+		<title>agent-masternode</title>
 	</head>
 	<body>
 		Oops...
